--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Cryptosquare</title>
+    <title>Beep Boop</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/jquery-3.3.1.js" charset="utf-8"></script>
@@ -14,7 +14,7 @@
         <h1>Beep Boop</h1>
         <div class="form-group">
           <label for="message-input">Enter A Number Here!</label>
-          <input id="message-input" class="form-control" type="text">
+          <input id="message-input" class="form-control" type="number">
           <br>
         </div>
           <button type="submit" class="btn btn-danger">Submit</button>
