Enter code for number toString and add code to styles.css.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <input id="message-input" class="form-control" type="number">
           <br>
         </div>
-          <button type="submit" class="btn btn-danger">Submit</button>
+          <button type="submit" class="button">Submit</button>
           <br>
           <div class="output-area">
             <br>
