Add css code to stylize application, unable to get animate to work.

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
   <body>
     <div class="container">
       <form id="beepboop-form">
+        <br>
+        <br>
         <h1>Beep Boop</h1>
         <div class="form-group">
-          <label for="message-input">Enter A Number Here!</label>
+          <label for="message-input">Enter A Number Here</label>
           <input id="message-input" class="form-control" type="number">
-          <br>
         </div>
           <button type="submit" class="button">Submit</button>
           <br>
@@ -24,10 +25,11 @@
             <span id="message-output"></span>
 
           </div>
-
       </form>
-
     </div>
-
+    <br>
+    <p id="end">&copy; 2018 Anousone Kaseumsouk</p>
+  </footer>
   </body>
+  <footer>
 </html>
