--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Beep Boop</title>
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/jquery-3.3.1.js" charset="utf-8"></script>
     <script src="js/scripts.js" charset="utf-8"></script>
@@ -13,7 +14,9 @@
       <form id="beepboop-form">
         <br>
         <br>
-        <h1>Beep Boop</h1>
+        <div class="item animated flash">
+          <h1>Beep Boop</h1>
+        </div>
         <div class="form-group">
           <label for="message-input">Enter A Number Here</label>
           <input id="message-input" class="form-control" type="number">
