--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
         <br>
         <div class="item animated flash">
           <h1>Beep Boop</h1>
+          <!-- <h1>Beep Boop</h1> -->
         </div>
         <div class="form-group">
-          <label for="message-input">Enter A Number Here</label>
+          <label for="message-input">Enter Numbers Here</label>
           <input id="message-input" class="form-control" type="number">
         </div>
           <button type="submit" class="button">Submit</button>
