Final commit, add media icons, fix footer, final review of code, sometimes it freezes if very large numbers entered.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Beep Boop</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/jquery-3.3.1.js" charset="utf-8"></script>
     <script src="js/scripts.js" charset="utf-8"></script>
@@ -30,10 +31,12 @@
 
           </div>
       </form>
+    </section>
+        <div class="icons">
+        <a href="https://github.com/sonekase/beep-boop" class="fa fa-github"></a>
+        <a href="mailto:anousonekaseumsouk@icloud.com" class="fa fa-envelope"></a>
+      <footer><p id="end">&copy; 2018 Anousone Kaseumsouk</p></footer>
     </div>
-    <br>
-    <p id="end">&copy; 2018 Anousone Kaseumsouk</p>
-  </footer>
   </body>
   <footer>
 </html>
